[package]
name = "b-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rayon = "1.5"
anyhow = "1.0.53"
serde_json = "1.0.78"
serde = {features = ["derive"], version = "1.0.136"}